Ni citation included

--- a/Paper/References/MyLibraryATE.bib
+++ b/Paper/References/MyLibraryATE.bib
@@ -1942,3 +1942,23 @@ A human skull from 34,000 years ago found in Mongolia elucidates the genetics of
 	pages = {1387--1393},
 	file = {Full Text:/home/leonardo_iasi/Zotero/storage/SXJ93EC7/McVean and Cardin - 2005 - Approximating the coalescent with recombination.pdf:application/pdf}
 }
+
+
+@article{ni_length_2016,
+	title = {Length {Distribution} of {Ancestral} {Tracks} under a {General} {Admixture} {Model} and {Its} {Applications} in {Population} {History} {Inference}},
+	volume = {6},
+	copyright = {2016 The Author(s)},
+	issn = {2045-2322},
+	url = {https://www.nature.com/articles/srep20048},
+	doi = {10.1038/srep20048},
+	abstract = {The length of ancestral tracks decays with the passing of generations which can be used to infer population admixture histories. Previous studies have shown the power in recovering the histories of admixed populations via the length distributions of ancestral tracks even under simple models. We believe that the deduction of length distributions under a general model will greatly elevate the power. Here we first deduced the length distributions under a general model and proposed general principles in parameter estimation and model selection with the deduced length distributions. Next, we focused on studying the length distributions and its applications under three typical special cases. Extensive simulations showed that the length distributions of ancestral tracks were well predicted by our theoretical framework. We further developed a new method, AdmixInfer, based on the length distributions and good performance was observed when it was applied to infer population histories under the three typical models. Notably, our method was insensitive to demographic history, sample size and threshold to discard short tracks. Finally, good performance was also observed when applied to some real datasets of African Americans, Mexicans and South Asian populations from the HapMap project and the Human Genome Diversity Project.},
+	language = {en},
+	number = {1},
+	urldate = {2021-06-06},
+	journal = {Scientific Reports},
+	author = {Ni, Xumin and Yang, Xiong and Guo, Wei and Yuan, Kai and Zhou, Ying and Ma, Zhiming and Xu, Shuhua},
+	month = jan,
+	year = {2016},
+	pages = {20048},
+	file = {Full Text PDF:/home/leonardo_iasi/Zotero/storage/NFY6QHAH/Ni et al. - 2016 - Length Distribution of Ancestral Tracks under a Ge.pdf:application/pdf;Snapshot:/home/leonardo_iasi/Zotero/storage/Q8JTKFIZ/srep20048.html:text/html}
+}
