Update on Overleaf.

--- a/Paper/Limits_to_the_Nea_Hum_admixture_dating_revised.tex
+++ b/Paper/Limits_to_the_Nea_Hum_admixture_dating_revised.tex
@@ -206,7 +206,7 @@ Conceptually, identifying an extended pulse requires us to establish that the le
 
 %\subsection{What we want to do}\label{what-we-want-to-do}
 
-Here, we first define the extended admixture pulse model and derive the resulting segment length and ALD distributions, and introduce inference schemes for either data. We then evaluate under which scenarios these two models can be distinguished, using  perfectly known data and more realistic population genetic simulations.  We show that power to distinguish these scenario is higher for more recent events and longer pulses, but that high-quality data is required for accurate inference. Based on these results, we use data from European genomes  \citep{the_1000_genomes_project_consortium_global_2015} to that  for the  case of Neandertal admixture, a simple pulses cannot be distinguished from continuous admixture over an extended period of time, and the data are consistent with a multitude of durations, up to several tens of thousand of years.
+Here, we first define the extended admixture pulse model and derive the resulting segment length and ALD distributions, and introduce inference schemes for either data. We then evaluate under which scenarios these two models can be distinguished, using  perfectly known data and more realistic population genetic simulations.  We show that power to distinguish these scenario is higher for more recent events and longer pulses, but that accurate inference requires high-quality data. Based on these results, we use data from European genomes  \citep{the_1000_genomes_project_consortium_global_2015} and find that for the case of Neandertal admixture, a simple pulses cannot be distinguished from continuous admixture over an extended period of time, and the data are consistent with a multitude of durations, up to several tens of thousand of years. 
 
 \begin{figure}
 \centering
