Update on Overleaf.

--- a/Paper/Review.tex
+++ b/Paper/Review.tex
@@ -80,11 +80,11 @@
 \floatplacement{figure}{H}
 \begin{document}
 
-We thank the editor and all three reviewers for their very constructive feedback. We also received feedback from Harald Ringbauer and Shai Carmi on details of the derivations, which we also incorporated in our revised manuscript. As a result, we feel that the current version of the manuscript is much improved, and hope we satisfactorily address all major issues raised during the review process.
+We thank the editor and all three reviewers for their very constructive feedback. While working on the revised manuscript, we substantially altered the derivation and presentation of the theoretical results. This was done with substantial contributions from \textbf{Harald Ringbauer}, whom we added as a co-author. As a result, we feel that the current version of the manuscript is much improved, has a much clearer presentation and  we hope we satisfactorily address all major issues raised during the review process.
 
 In particular, we made the following major changes:
 \begin{itemize}
-    \item We completely reworked the \textbf{theory section}, and now derive the theory for segments and ALD independently to remove the disconnect between the theory and applications noted particularly by reviewer 1. 
+    \item In response to the apparent disconnect between theory and application noted particularly by reviewer 1, we completely reworked the \textbf{theory section}. We now derive the connection between segment length distribution and ALD explicitly; showing that the two are direct functions from each other. To keep the presentation short, we added an \textbf{Appendix} where we present detailed computations.
     \item We also added an \textbf{Appendix} where we detail the effect of the simplifications we made, and how the theory were to change if one incorporated e.g. genetic drift, particularly to address concerns raised by reviewer 3.
     \item We now focus more on model choice, as suggested by reviewer 1. For this purpose, we added a new \textbf{Figure 2}, with model-choice results under an idealized scenario. 
     \item We completely reworked \textbf{Figure 3}, to also include model choice between the simple and extended pulse model, and comparisons between segment-based inference and ALD inference (as suggested by reviewer 1), changed the parameter setting to one more directly relevant to Neandertal gene flow (as suggested by reviewer 2), and, in panel C adding curves showing the fit of the data to the predictions (as suggested by reviewer 3).
@@ -211,7 +211,7 @@ In this paper, we develop a new population genetic model for dating extended pul
 Minor comments:
 Consider adding “on average” to the first sentence of the abstract (referring to the percentage of Neandertal DNA).
 
-\textbf{Answer:} 
+\textbf{Answer:} In our view, 2\% -3\% is a rough range, not an average.
 
 Page 6, line 20. “Ti represents the time when segment Li entered the population” Would it be segment i instead of Li? 
 
