Update on Overleaf.

--- a/Paper/Review.tex
+++ b/Paper/Review.tex
@@ -85,7 +85,7 @@ We thank the editor and all three reviewers for their very constructive feedback
 In particular, we made the following major changes:
 \begin{itemize}
     \item In response to the apparent disconnect between theory and application noted particularly by reviewer 1, we completely reworked the \textbf{theory section}. We now derive the connection between segment length distribution and ALD explicitly; showing that the two are direct functions from each other. To keep the presentation short, we added an \textbf{Appendix} where we present detailed computations.
-    \item We also added an \textbf{Appendix} where we detail the effect of the simplifications we made, and how the theory were to change if one incorporated e.g. genetic drift, particularly to address concerns raised by reviewer 3.
+    \item We also added a second \textbf{Appendix} where we detail the effect of the simplifications we made, and how the theory were to change if one incorporated e.g. genetic drift, particularly to address concerns raised by reviewer 3.
     \item We now focus more on model choice, as suggested by reviewer 1. For this purpose, we added a new \textbf{Figure 2}, with model-choice results under an idealized scenario. 
     \item We completely reworked \textbf{Figure 3}, to also include model choice between the simple and extended pulse model, and comparisons between segment-based inference and ALD inference (as suggested by reviewer 1), changed the parameter setting to one more directly relevant to Neandertal gene flow (as suggested by reviewer 2), and, in panel C adding curves showing the fit of the data to the predictions (as suggested by reviewer 3).
     \item We redid all simulations, in an attempt to improve the efficiency of segment-based inference. We also updated the fitting function (following a comment by reviewer 3).
