Update on Overleaf.

--- a/Paper/supplement_hr.tex
+++ b/Paper/supplement_hr.tex
@@ -154,7 +154,7 @@ D(l) = \frac{\mathbb{E}[K]}{G} \int_l^\infty P(x) (x-l) \diff x.
 \label{func_rel1}
 \end{equation}
 
-This function relationship now allows one to directly derive $D(l)$ from $P(l)$. 
+Eq.~\ref{func_rel1} now allows one to directly derive $D(l)$ from $P(l)$. 
 
 \subsection{From the LD function to the admixture segment length distribution}
 To derive an inverse relationship, we now derive D(l) two times with respect to l ($\frac{\diff}{\diff L}$). Using Eq.~\ref{func_rel1} and the Leibnitz rule yields:
