Update on Overleaf.

--- a/Paper/References/MyLibraryATE.bib
+++ b/Paper/References/MyLibraryATE.bib
@@ -1962,3 +1962,23 @@ A human skull from 34,000 years ago found in Mongolia elucidates the genetics of
 	pages = {20048},
 	file = {Full Text PDF:/home/leonardo_iasi/Zotero/storage/NFY6QHAH/Ni et al. - 2016 - Length Distribution of Ancestral Tracks under a Ge.pdf:application/pdf;Snapshot:/home/leonardo_iasi/Zotero/storage/Q8JTKFIZ/srep20048.html:text/html}
 }
+
+
+@article{choin_genomic_2021,
+	title = {Genomic insights into population history and biological adaptation in {Oceania}},
+	volume = {592},
+	copyright = {2021 The Author(s), under exclusive licence to Springer Nature Limited},
+	issn = {1476-4687},
+	url = {https://www.nature.com/articles/s41586-021-03236-5},
+	doi = {10.1038/s41586-021-03236-5},
+	abstract = {The Pacific region is of major importance for addressing questions regarding human dispersals, interactions with archaic hominins and natural selection processes1. However, the demographic and adaptive history of Oceanian populations remains largely uncharacterized. Here we report high-coverage genomes of 317 individuals from 20 populations from the Pacific region. We find that the ancestors of Papuan-related (‘Near Oceanian’) groups underwent a strong bottleneck before the settlement of the region, and separated around 20,000–40,000 years ago. We infer that the East Asian ancestors of Pacific populations may have diverged from Taiwanese Indigenous peoples before the Neolithic expansion, which is thought to have started from Taiwan around 5,000 years ago2–4. Additionally, this dispersal was not followed by an immediate, single admixture event with Near Oceanian populations, but involved recurrent episodes of genetic interactions. Our analyses reveal marked differences in the proportion and nature of Denisovan heritage among Pacific groups, suggesting that independent interbreeding with highly structured archaic populations occurred. Furthermore, whereas introgression of Neanderthal genetic information facilitated the adaptation of modern humans related to multiple phenotypes (for example, metabolism, pigmentation and neuronal development), Denisovan introgression was primarily beneficial for immune-related functions. Finally, we report evidence of selective sweeps and polygenic adaptation associated with pathogen exposure and lipid metabolism in the Pacific region, increasing our understanding of the mechanisms of biological adaptation to island environments.},
+	language = {en},
+	number = {7855},
+	urldate = {2021-06-07},
+	journal = {Nature},
+	author = {Choin, Jeremy and Mendoza-Revilla, Javier and Arauna, Lara R. and Cuadros-Espinoza, Sebastian and Cassar, Olivier and Larena, Maximilian and Ko, Albert Min-Shan and Harmant, Christine and Laurent, Romain and Verdu, Paul and Laval, Guillaume and Boland, Anne and Olaso, Robert and Deleuze, Jean-François and Valentin, Frédérique and Ko, Ying-Chin and Jakobsson, Mattias and Gessain, Antoine and Excoffier, Laurent and Stoneking, Mark and Patin, Etienne and Quintana-Murci, Lluis},
+	month = apr,
+	year = {2021},
+	pages = {583--589},
+	file = {Full Text PDF:/home/leonardo_iasi/Zotero/storage/8QEZ5374/Choin et al. - 2021 - Genomic insights into population history and biolo.pdf:application/pdf;Snapshot:/home/leonardo_iasi/Zotero/storage/2IM5RVSX/s41586-021-03236-5.html:text/html}
+}
