--- a/Paper/Review.tex
+++ b/Paper/Review.tex
@@ -164,11 +164,11 @@ Improve documentation for the `fit-extended-pulse` and `fit-simple-pulse` functi
 One suggestion would be to provide an example input for these functions within the repository to help the end user understand more clearly the required data table format. 
 I would suggest a “requirements.md” or “requirements.txt” file in the main directory of the code to inform the user of the libraries required to import (and their versions if possible).
 
-\textbf{Answer:} 
+\textbf{Answer:} We currently work on the github page. We included a README file for the whole project and a specific one in the directory of the fitting scripts. We will add example files for segment and ALD data, which can be fit with the scripts provided. We will implement the roxygen formatting to document the code better and make it more user friendly. 
 
 \section{Reviewer 2}\label{Reviewer 2}
 Comments to the Author
-In their manuscript, Iasi & Peter introduce an extended admixture pulse model that allows for joint estimation of the timing and duration of gene flow. Using simulations, the authors show how the estimates of timing and duration of gene flow are affected by different model assumptions and convincingly show that the estimates for the mean time of admixture are largely robust to details of the gene flow models. Authors then apply their method to Neandertal data and conclude that all tested scenarios (with different admixture durations) are compatible with observed data.
+In their manuscript, Iasi \& Peter introduce an extended admixture pulse model that allows for joint estimation of the timing and duration of gene flow. Using simulations, the authors show how the estimates of timing and duration of gene flow are affected by different model assumptions and convincingly show that the estimates for the mean time of admixture are largely robust to details of the gene flow models. Authors then apply their method to Neandertal data and conclude that all tested scenarios (with different admixture durations) are compatible with observed data.
 
 In addition to the careful examination of the extended admixture pulse model with simulations, one of the strongest aspects of this work is the discussion about the implications of their findings to the interpretation of previous dates for the Neandertal-Human introgression and for the understanding of selection on introgressed Neandertal haplotypes. I thoroughly enjoyed reading this manuscript and believe the implications of their work are relevant for the advance of our understanding of Neandertal introgression, in addition to representing a theoretical advance over previous admixture models. Below I list my concerns with this manuscript. 
 
@@ -236,7 +236,7 @@ Typo? page 18, line 40/41 The effective… *and are* based on estimates…”
 
 Figure 2, panel A: Please use “Single pulse” instead of “Pulse.”
 
-\textbf{Answer:} Figure 2 is replaced by Figure \ref{fig:figResult2}. The two admixture models are refert to as "simple pulse" and "extended pulse".
+\textbf{Answer:} Figure 2 is replaced by Figure 3. The two admixture models are referred  to as "simple pulse" and "extended pulse".
 
 
 Figure 2, panel B: It seems like the color legend is redundant. Admixture duration is shown at the bottom of each column already, so no need to use the different colors. Also, it could be a bit distracting since you use the same colors for Figure 4. 
@@ -249,11 +249,11 @@ Figure 3: why only the second dot is green?
 
 Add units for time in figure 4. I suppose it is generations.
 
-\textbf{Answer:} We included the sentence "All times are given in generations" in the legends of Figure \ref{fig:figResult2} and \ref{fig:Closer_sampling}.
+\textbf{Answer:} We included the sentence "All times are given in generations" in the legends of Figure 3 and 6.
 
 References to supplementary figures lack the word “Figure.” 
 
-\textbf{Answer:} We changed it and now throughout the paper it refers to as Supplement Figure or Supplement Table.
+\textbf{Answer:} We changed it and now throughout the paper it refers to as Supplementary Figure or Supplementary Table.
 
 \section{Reviewer 3}\label{Reviewer 3}
 
